fix bugs with too long titles

--- a/collection/static/collection/style.css
+++ b/collection/static/collection/style.css
@@ -99,18 +99,35 @@ button:hover {
     justify-content: center;
     text-align: center;
     color: white;
+    min-width: 250px; 
 }
 
+.album .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .album .img {
     background-size: cover;
     height: 230px;
     width: 230px;
     margin-bottom: 20px;
+    margin-left: auto; 
+    margin-right: auto; 
 }
 
+.album h2 {
+    margin-bottom: 10px;
+    max-height: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 1.4em;
+    max-width: 380px;
+}
 
-.album h2, .album h3 {
+.album h3 {
     margin-bottom: 10px;
 }
 
